--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
 <title>base.html</title>
 <!-- main stylepage -->
-<link href="main.css" rel="stylesheet" type="text/css">
+<link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css">
 <!-- Google API for Chelsea Market font -->
 <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
 <!-- CloudFlare search font -->
