--- a/TitanComputerParts/templates/static/css/main.css
+++ b/TitanComputerParts/templates/static/css/main.css
@@ -110,6 +110,7 @@ body {
 	border-radius: 50%;
 	float: right;
 	display: flex;
+	margin-right: 30px;
 }
 
 /***** CONTACT US *****/
@@ -130,4 +131,39 @@ body {
 	align-content: center;
 	text-align: center;
 	align-items: center;
+}
+/***** REGISTER *****/
+.register {
+	font-family: 'Chelsea Market', cursive;
+}
+
+.register h1 {
+	text-align: center;
+	font-size: 50px;
+	color: #3D9BE9;
+}
+.register h2 {
+	text-align: center;
+	font-size: 20px;
+	color: #3D9BE9;
+}
+
+.register p {
+	color: black;
+	text-align: left;
+	margin: auto;
+	width: 500px;
+	padding-bottom: 5px;
+}
+
+.registerBTN {
+	text-align: center;
+	padding-top: 7px;
+}
+.register ul {
+	text-decoration: none;
+	list-style-type: none;
+	width: 500px;
+	margin: auto;
+	padding: 5px;
 }
