--- a/TitanComputerParts/templates/base.html
+++ b/TitanComputerParts/templates/base.html
@@ -21,6 +21,7 @@
 				<i class="fa fa-search"></i>
 			 </button>
 			 <div class="logincart">
+                 <li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 				<i class="fa fa-user" aria-hidden="true"></i>
 				<i class="fa" style="font-size:24px">&#xf07a;</i>
 				<span class="badge badge-warning" id="lblCartCount"> 0 </span>
