--- a/TitanComputerParts/templates/static/css/main.css
+++ b/TitanComputerParts/templates/static/css/main.css
@@ -167,3 +167,54 @@ body {
 	margin: auto;
 	padding: 5px;
 }
+
+/***** LOGIN *****/
+.auth {
+	text-align: center;
+}
+.auth h1 {
+	color: #3D9BE9;
+}
+.auth p {
+	color: black;
+	font-size: 15px;
+}
+
+/***** Login Dropdown *****/
+.userdropbtn {
+	color: black;
+	text-align: center;
+	background-color: #3D9BE9;
+	padding-right: 10px;
+	margin: 0px;
+	border: none;
+	width: 15%;
+	font-size: 20px;
+}
+
+.userdropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.userdropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.userdropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.userdropdown-content a:hover {background-color: #ddd;}
+
+.userdropdown:hover .userdropdown-content {display: block;}
+
+.userdropdown:hover .dropbtn {background-color: #3e8e41;}
