--- a/TitanComputerParts/templates/base.html
+++ b/TitanComputerParts/templates/base.html
@@ -41,7 +41,7 @@
 		</div>
 		<ul>
 			<li><a class="active" href="{% url 'home' %}">Home</a></li>
-			<li><a class="active" href="#">Shop</a></li>
+			<li><a class="active" href="{% url 'store' %}">Store</a></li>
 			<li><a class="active" href="{% url 'about' %}">About Us</a></li>
 			<li><a class="active" href="{% url 'contact' %}">Contact Us</a></li>
 		</ul>
