--- a/TitanComputerParts/templates/static/css/main.css
+++ b/TitanComputerParts/templates/static/css/main.css
@@ -218,3 +218,5 @@ body {
 .userdropdown:hover .userdropdown-content {display: block;}
 
 .userdropdown:hover .dropbtn {background-color: #3e8e41;}
+
+/***** Store *****/
