--- a/salesman/Templates/salesman_product_page.html
+++ b/salesman/Templates/salesman_product_page.html
@@ -2,20 +2,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <head>
-        <meta charset="UTF-8">
-        <title>Titan Computer Parts</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    </head>
+
     <body>
     <style>
         body {
             background-color: #3D9BE9;
         }
     </style>
-    <div class="row">
-        <h2 style="padding-left: 15Px">Products</h2>
-    </div>
+    <h1 style="text-align: center; background-color: #3D9BE9;">Products</h1>
+    <div class="bootstrap">
+
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
@@ -52,4 +48,5 @@
 
 
     </body>
+    </div>
 {% endblock %}
