--- a/salesman/Templates/salesman_product_page.html
+++ b/salesman/Templates/salesman_product_page.html
@@ -39,7 +39,7 @@
                     <td>{{ product.product_category }}</td>
                     <td>{{ product.product_stock }}</td>
                     <td>{{ product.product_location }}</td>
-                    <td>{{ product.product_added }}</td>
+                    <td>{{ product.created_date }}</td>
                     <td>{{ product.product_updated }}</td>
                 </tr>
             {% endfor %}
