--- a/salesman/Templates/salesman_product_page.html
+++ b/salesman/Templates/salesman_product_page.html
@@ -39,14 +39,19 @@
                     <td>{{ product.product_category }}</td>
                     <td>{{ product.product_stock }}</td>
                     <td>{{ product.product_location }}</td>
-                    <td>{{ product.created_date }}</td>
+                    <td>{{ product.product_added }}</td>
                     <td>{{ product.product_updated }}</td>
-                </tr>
+                <td><a href="{% url 'salesman:product_edit' pk=product.pk %}"
+                class="btn btn-warning">Edit</a></td>
+                    <td><a href="{% url 'salesman:product_delete' pk=product.pk %}"
+       onclick="return confirm('Are you sure you want to delete?')"
+       class="btn btn-danger">Delete</a>
+                    </td>
+                    </td>
             {% endfor %}
             </tbody>
         </table>
-
-
-    </body>
     </div>
+    </body>
+
 {% endblock %}
