--- a/salesman/Templates/salesman_product_delete.html
+++ b/salesman/Templates/salesman_product_delete.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 {% block body_block %}
     <h1>Delete {{ product.name }}?</h1>
 
@@ -11,5 +11,3 @@
     </form>
 
 {% endblock %}
-
-</html>
