Added Customer View pages for Salesman
Complete functionality

--- a/TitanComputerParts/templates/base.html
+++ b/TitanComputerParts/templates/base.html
@@ -49,6 +49,7 @@
 
             {% if user.is_superuser %}
             <li><a class="active" href="{% url 'salesman:product_list' %}">Products</a></li>
+            <li><a class="active" href="{% url 'salesman:customer_list' %}">Customer View</a></li>
             {% endif %}
 
 		</ul>
