--- a/salesman/Templates/salesman_product_new.html
+++ b/salesman/Templates/salesman_product_new.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends 'TitanComputerParts/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
     <h1>Add a New Product</h1>
     <form method="POST" class="product-form">{% csrf_token %}
