--- a/salesman/Templates/salesman_product_page.html
+++ b/salesman/Templates/salesman_product_page.html
@@ -39,19 +39,25 @@
                     <td>{{ product.product_category }}</td>
                     <td>{{ product.product_stock }}</td>
                     <td>{{ product.product_location }}</td>
-                    <td>{{ product.product_added }}</td>
+                    <td>{{ product.created_date }}</td>
                     <td>{{ product.product_updated }}</td>
+
                 <td><a href="{% url 'salesman:product_edit' pk=product.pk %}"
-                class="btn btn-warning">Edit</a></td>
-                    <td><a href="{% url 'salesman:product_delete' pk=product.pk %}"
-       onclick="return confirm('Are you sure you want to delete?')"
-       class="btn btn-danger">Delete</a>
-                    </td>
-                    </td>
+                class="btn btn-warning">Edit</a>
+                </td>
+
+                <td><a href="{% url 'salesman:product_delete' pk=product.pk %}"
+                onclick="return confirm('Are you sure you want to delete?')"
+                class="btn btn-danger">Delete</a>
+                </td>
+                </tr>
             {% endfor %}
+                <td><a href="{% url 'salesman:product_new' %}"
+                class="row"><span class="btn btn-new">Add Product</span></a></td>
             </tbody>
         </table>
-    </div>
+     </div>
+
     </body>
 
 {% endblock %}
