Fix for CSS error on products

--- a/TitanComputerParts/templates/base.html
+++ b/TitanComputerParts/templates/base.html
@@ -8,9 +8,8 @@
 <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css">
 <!-- Google API for Chelsea Market font -->
 <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
-<!-- Isolated Bootstrap
+<!-- Isolated Bootstrap-->
 <link href="{% static 'css/iso_bootstrap4.0.0.css' %}" rel="stylesheet" type="text/css">
--->
 <!-- CloudFlare search font -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
