Added Payment webpage

--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Cart</h1>
+    <h1>My Cart</h1>
+    <hr>test</hr>
+ <style>
+.vl {
+  border-left: 6px solid black;
+  height: 500px;
+  position: absolute;
+  left: 50%;
+  margin-left: -3px;
+  top: 0;
+}
+</style>
+
+<div class="vl"></div>
 {% endblock %}
