--- a/store/templates/static/css/main.css
+++ b/store/templates/static/css/main.css
@@ -255,14 +255,9 @@ body {
 	font-weight: BOLD;
 }
 
-h9 {
-	font-style: italic;
-	font-weight: bold;
-	font-size: x-large;
-}
+/**** Checkout Page */
 
-
-.row1 {
+.row {
   display: -ms-flexbox; /* IE10 */
   display: flex;
   -ms-flex-wrap: wrap; /* IE10 */
@@ -277,22 +272,21 @@ h9 {
 
 .col-50 {
   -ms-flex: 50%; /* IE10 */
-
+  flex: 50%;
 }
 
 .col-75 {
   -ms-flex: 75%; /* IE10 */
-
+  flex: 75%;
 }
 
-.col-50 {
-	margin-right: 25px;
-}
+.col-25,
+.col-50,
 .col-75 {
-  margin-left: 25px;
+  padding: 0 16px;
 }
 
-.container1 {
+.container {
   background-color: #f2f2f2;
   padding: 5px 20px 15px 20px;
   border: 1px solid lightgrey;
@@ -300,7 +294,7 @@ h9 {
 }
 
 input[type=text] {
-  width: 50;
+  width: 100%;
   margin-bottom: 20px;
   padding: 12px;
   border: 1px solid #ccc;
@@ -312,10 +306,19 @@ label {
   display: block;
 }
 
+.icon-container {
+  margin-bottom: 20px;
+  padding: 7px 0;
+  font-size: 24px;
+}
 
-.btn5 {
-  background-color: #3D9BE9;
-  color: black;
+.btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
   border-radius: 3px;
   cursor: pointer;
   font-size: 17px;
@@ -326,23 +329,16 @@ label {
 }
 
 span.price {
-  float: none;
+  float: right;
   color: grey;
 }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
 @media (max-width: 800px) {
-  .row1 {
+  .row {
     flex-direction: column-reverse;
   }
   .col-25 {
     margin-bottom: 20px;
   }
-}
-
-.container2 {
-	background-color: #f2f2f2;
-	padding: 5px 20px 15px 20px;
-	border: 1px solid lightgrey;
-	border-radius: 3px;
 }
