Fixed sign up Issue
The Issue where when signing up the password confermation field did not show dots and only showed text has been fixed.

--- a/TitanComputerParts/templates/base.html
+++ b/TitanComputerParts/templates/base.html
@@ -33,7 +33,7 @@
                              <a href="{% url 'change_password' %}">Change Password</a>
                          {% else %}
                              <a href="{% url 'login' %}">Login</a>
-                             <a href="{% url 'register' %}">Register</a>
+                             <a href="{% url 'signup' %}">Register</a>
                          {% endif %}
                      </div>
                  </div>
