--- a/salesman/Templates/salesman_product_page.html
+++ b/salesman/Templates/salesman_product_page.html
@@ -11,7 +11,6 @@
     </style>
     <h1 style="text-align: center; background-color: #3D9BE9;">Products</h1>
     <div class="bootstrap">
-
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
@@ -54,6 +53,8 @@
             {% endfor %}
                 <td><a href="{% url 'product_new' %}"
                 class="row"><span class="btn btn-new">Add Product</span></a></td>
+                <td><a href="{% url 'product_search' %}"
+                class="row"><span class="btn btn-new">Search</span></a></td>
             </tbody>
         </table>
      </div>
