Home/product/categories
Adding ability to see home page, product page, and added categories.

--- a/TitanComputerParts/templates/home.html
+++ b/TitanComputerParts/templates/home.html
@@ -4,30 +4,12 @@
 {% block content %}
     <div class="bootstrap">
         <div class="container">
-            <div class="hotitems">
-                <h1>HOT PRODUCTS</h1>
-                <div class="row">
-                    <div class="col">
-                        <p>Prod1</p>
-                    </div>
-                    <div class="col">
-                        <p>Prod2</p>
-                    </div>
-                    <div class="col">
-                        <p>Prod3</p>
-                    </div>
-                    <div class="col">
-                        <p>Prod4</p>
-                    </div>
-            </div>
-        </div>
-        <div class="container">
             <div class="homebuttons">
                 <h1>What are you looking for?</h1>
                 <div class="row">
                     <div class="col">
                         <a href="#" style="margin-bottom: 15px">CPU / Processors</a>
-                        <a href="#" style="margin-bottom: 15px">Video Cards<</a>
+                        <a href="#" style="margin-bottom: 15px">Video Cards</a>
                         <a href="#" style="margin-bottom: 15px">Power Supplies</a>
                     </div>
                     <div class="col">
