--- a/TitanComputerParts/templates/static/css/main.css
+++ b/TitanComputerParts/templates/static/css/main.css
@@ -254,3 +254,47 @@ body {
 	color: #3D9BE9;
 	font-weight: BOLD;
 }
+
+/***** Product Page *****/
+.productdisplay {
+	padding: 20px;
+}
+
+.productdisplay img {
+    float: left;
+	padding-right: 10px;
+}
+
+.productdisplay h1 {
+	padding-top: 20px;
+	font-size: 25px !important;
+}
+
+.productdisplay h2 {
+	padding-top: 20px;
+	font-size: 25px !important;
+}
+
+.productdisplay p3 {
+    font-size: 25px;
+}
+
+/***** Store Page *****/
+.box-element {
+	box-shadow: hsl(0,0%,80%) 0 0 16px;
+	background-color: #fff;
+	border-radius: 4px;
+	padding: 10px;
+}
+
+.thumbnail{
+	width: 100%;
+	height: 250px;
+	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+    -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+    box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
+}
+
+.col-lg-4 {
+	margin-top: 10px;
+}
