--- a/salesman/Templates/salesman_product_new.html
+++ b/salesman/Templates/salesman_product_new.html
@@ -3,7 +3,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Add a New Product</h1>
-    <form method="POST" class="product-form">{% csrf_token %}
+    <form method="POST" enctype="multipart/form-data">{% csrf_token %}
           {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
     </form>
